--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body{
     scroll-behavior: smooth;
 }
 
+
+
 #particles-js {
     position: fixed;
     width: 100%;
@@ -96,16 +98,16 @@ h6 {
 #header h2{
     font-size: 40px;
     font-family: 'Roboto', sans-serif;
-    margin-top: 250px;
+    margin-top: 50px;
     padding:10px 30px;
     color: #fff;
 
 }
 
 #header .typeh2{
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Roboto', sans-serif;
-    margin-top: 0px;
+    margin-top: 10px;
     padding:10px 30px;
     color: #fff;
 }
@@ -117,10 +119,12 @@ h6 {
 }
 
 #header .social{
-    display: inline;
-    margin-top: 45px;
+    display: inline-block;
+    margin-top: 225px;
     padding:0 30px ;
-    float:left;
+    align-items: center;
+
+    
    
 }
 
@@ -211,7 +215,7 @@ h6 {
 
     #header h2{
         padding: -20px;
-        margin-top: 180px;
+        margin-top: 100px;
         line-height: auto;
         font-size: 30px;
     }
@@ -222,6 +226,14 @@ h6 {
     }
     #header .social {
      margin-top: 50px;
+
+    }
+    div .social{
+        position:fixed;
+        display: block;
+        bottom: 10px;
+        text-align: center;
+        margin-left: 10px;
     }
 }
 
@@ -249,7 +261,16 @@ h6 {
     font-size: 60px;
 }
 
+.heart{
+    padding:10px 30px;
+    font-size:120%;
+}
 
+#heart{
+    font-size: 100%;
+    color: red;
+    
+}
 
 
 
@@ -527,7 +548,7 @@ a.button4:hover {
     width: 150px;
     height: 2px;
     display: inline-block;
-    background: #bc96e6;
+    
     margin: -4px auto;
 
 }
@@ -1170,3 +1191,4 @@ a.button4:hover {
 
     }
 }
+
