--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 * VARIABLES
 * Tweak them for prefered result 
 */
-#site {
+/* #site {
     opacity: 0;
     transition: all 2s ease;
   }
@@ -113,7 +113,7 @@
       opacity: 1;
     }
   }
-  
+   */
 
 body{
     font-family: 'Open Sans', sans-serif;
