--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ h1,h2,h3,h4,h5,h6 {
     margin: 0;
     padding: 0 30px;
     font-weight: 600;
+    text-align: center;
 } 
 #header h1 a,
 #header h1 a:hover {
@@ -194,6 +195,7 @@ h1,h2,h3,h4,h5,h6 {
     margin-top: 50px;
     padding:10px 30px;
     color: #fff;
+    text-align: center;
 }
 #header .typeh2{
     font-size: 30px;
@@ -314,16 +316,8 @@ h1,h2,h3,h4,h5,h6 {
     font-size: 60px;
     margin-top: 10px;
 }
-.heart{
-    padding:10px 30px;
-    font-size:120%;
-}
-#heart{
-    font-size: 100%;
-    color: red;
-}
 .navbar{
-	padding: 25px 0;
+	padding: 30px;
 }
 nav a,nav a:hover{
 	color: #fff;
@@ -356,7 +350,7 @@ li.nav-item a.nav-link:hover::after{
 	padding: 0;
 }
 li.nav-item{
-	margin: 0 15px;
+	margin: 10px 10px;
 }
 li.nav-item:last-child{
 	margin-right: 0;
@@ -371,7 +365,7 @@ li.nav-item:last-child{
     padding: 0;
     background-color: #000000;
     opacity: 1;
-    height: 60px;
+    height: 50px;
 }
 .nav-menu ul{
     display: flex;
@@ -387,7 +381,7 @@ section {
     width: 100%;
     top: 140px;
     bottom: 100%;
-    opacity: 0.8;
+    opacity: 0.9;
     transition: ease-in-out 0.4s;
     z-index: 2;
 }
@@ -398,7 +392,7 @@ section.section-show {
     padding-bottom: 45px;
 }
 section .container {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.95);
     padding: 25px;
 }
 @media (max-width: 768px) {
@@ -417,6 +411,7 @@ section .container {
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
     color: #fff;
+    text-align: center;
 }
 .section-title h2::after {
     content: "";
